단말정보 관리 시스템 init